ISS-DES-12-2-13 Fixed Elements spacing in Green Bar

--- a/styles/how-to-use-strensiq.css
+++ b/styles/how-to-use-strensiq.css
@@ -321,6 +321,7 @@
 	letter-spacing: 1.57px;
 	color: #DFDF00;
 	text-transform: uppercase;
+	margin-bottom: 2rem;
 }
 
 .looking-for-strensiq {
@@ -335,7 +336,7 @@
 
 .looking-for-strensiq__content .description {
 	color: var(--white);
-	margin-bottom: 4.5rem;
+	margin-bottom: 3.5rem;
 	width: 84%;
 }
 
